--- a/garden-shop/dev/components/quiz/quiz.html
+++ b/garden-shop/dev/components/quiz/quiz.html
@@ -5,14 +5,15 @@
                 <div class="quiz__title demibold">Планируете передвигаться по дорогам общего пользования?</div>
                 <div class="quiz__range">
                     <div class="quiz__range-slider">
-                        <div class="range-slider" data-limits="10000, 1000000" data-step="10000" data-unit=" ₽">
+                        <div class="range-slider caption" data-limits="10000, 1000000" data-step="10000" data-unit=" ₽">
                             <div class="range-slider__limits">
-                                <div class="range-slider__input-wrapper" data-before="до">
+                                <div class="range-slider__input-wrapper">
                                     <input type="text"
-                                        class="range-slider__input range-slider__input_max input demibold">
+                                        class="range-slider__input range-slider__input_max input demibold"
+                                        value="10000">
                                 </div>
                             </div>
-                            <div class="range-slider__wrapper">
+                            <div class="range-slider__wrapper ">
                                 <input class="range-slider__slider" type="text">
                             </div>
                         </div>
@@ -35,6 +36,24 @@
                             value="Пока не планирую, но в будущем возможно">
                         <span class="radio__checkmark"></span>
                     </label>
+                </div>
+            </div>
+            <div class="quiz__stage">
+                <div class="quiz__title demibold">Планируете передвигаться по дорогам общего пользования?</div>
+                <div class="quiz__range">
+                    <div class="quiz__range-slider">
+                        <div class="range-slider caption" data-limits="0, 125" data-step="1" data-unit=" ₽">
+                            <div class="range-slider__limits">
+                                <div class="range-slider__input-wrapper">
+                                    <input type="text"
+                                        class="range-slider__input range-slider__input_max input demibold" value="10">
+                                </div>
+                            </div>
+                            <div class="range-slider__wrapper ">
+                                <input class="range-slider__slider" type="text">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="quiz__stage">
