--- a/garden-shop/dev/style/scss/main.scss
+++ b/garden-shop/dev/style/scss/main.scss
@@ -127,9 +127,11 @@ body {
 	border-radius: 4px;
 	width: 100%;
 	font-feature-settings: "pnum" on, "lnum" on;
+
 	&__field {
 		padding: 14px 15px;
 		width: 100%;
+		font-feature-settings: "pnum" on, "lnum" on;
 	}
 	&__submit {
 		width: 24px;
@@ -297,23 +299,6 @@ body {
 	}
 	&__input {
 		padding: 10px;
-		padding-left: 35px;
-	}
-	&__input-wrapper {
-		position: relative;
-		z-index: 1;
-		&::before {
-			display: flex;
-			align-items: center;
-			content: attr(data-before);
-			position: absolute;
-			left: 10px;
-			top: 0;
-			height: 100%;
-			width: 20px;
-			color: #c9c8d3;
-			z-index: 2;
-		}
 	}
 	& .rs-bg {
 		background: rgba(226, 91, 38, 0.2);
@@ -323,6 +308,12 @@ body {
 		width: calc(100% + 30px);
 		transform: translateY(-50%);
 		border: none;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	& .rs-bg-point {
+		display: none;
 	}
 	& .rs-container {
 		height: 30px;
@@ -332,7 +323,7 @@ body {
 		background: #e25b26;
 		top: 50%;
 		transform: translateY(-50%);
-		border: none;
+		border: none !important;
 	}
 	& .rs-pointer {
 		border: none;
@@ -349,6 +340,11 @@ body {
 		&::after,
 		&::before {
 			display: none;
+		}
+	}
+	& .rs-scale {
+		& span::before {
+			display: none !important;
 		}
 	}
 }
@@ -1012,10 +1008,12 @@ body {
 		background-position: center;
 		background-size: contain;
 		background-repeat: no-repeat;
+		background-color: transparent;
 		width: 24px;
 		height: 24px;
 		top: 18px !important;
 		right: 30px !important;
+		opacity: 1;
 		& svg {
 			display: none;
 		}
@@ -1085,6 +1083,12 @@ body {
 			height: 0;
 			overflow: hidden;
 			transition: all ease 0.5s;
+		}
+	}
+	.popup {
+		&__body {
+			padding: 15px;
+			padding-top: 30px;
 		}
 	}
 }
