--- a/garden-shop/release/components/quiz/quiz.css
+++ b/garden-shop/release/components/quiz/quiz.css
@@ -6,10 +6,12 @@
   justify-content: space-between;
   flex-direction: column;
   position: relative;
+  gap: 60px;
 }
 .quiz__body {
   display: flex;
   justify-content: space-between;
+  gap: 30px;
 }
 .quiz__title {
   margin-bottom: 30px;
@@ -33,7 +35,6 @@
 }
 .quiz__checkbox {
   display: block;
-  margin-bottom: 20px;
 }
 .quiz__stage-content {
   max-height: 300px;
@@ -56,10 +57,15 @@
   border-radius: 5px;
   margin-bottom: 30px;
   justify-content: space-between;
+  align-items: center;
+}
+.quiz__discount-total-num {
+  white-space: nowrap;
 }
 .quiz__discount {
   width: 100%;
   max-width: 240px;
+  min-width: 240px;
 }
 .quiz__bottom {
   position: relative;
@@ -166,4 +172,104 @@
 }
 .quiz__stage_active {
   display: block;
+}
+.quiz .range-slider {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+  gap: 50px;
+  padding-top: 25px;
+}
+.quiz .range-slider__wrapper {
+  width: 100%;
+}
+.quiz .range-slider__limits {
+  max-width: 100px;
+  margin: 0;
+}
+.quiz .range-slider .rs-selected {
+  border-radius: 5px 0 0 5px;
+  background-color: #124144;
+  left: -15px !important;
+}
+.quiz .range-slider .rs-pointer {
+  background-color: #124144;
+}
+.quiz .range-slider .rs-bg {
+  background-color: rgba(18, 65, 68, 0.2);
+}
+.quiz .range-slider .rs-bg-point {
+  display: block;
+  background: #124144;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+}
+.quiz .range-slider .rs-scale span ins {
+  color: #c9c8d3;
+  margin-top: 30px;
+}
+.quiz .range-slider .rs-tooltip {
+  padding: 0;
+  border: none;
+  height: 16px;
+  bottom: 0;
+}
+
+@media (max-width: 767px) {
+  .quiz .range-slider__limits {
+    display: none;
+  }
+  .quiz__checkbox-list {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-width: 570px) {
+  .quiz__body {
+    flex-direction: column-reverse;
+  }
+  .quiz__discount {
+    max-width: none;
+  }
+  .quiz__discount-bar {
+    flex-direction: row;
+    height: 8px;
+  }
+  .quiz__discount-item {
+    font-size: 0;
+    padding: 0;
+    width: 100%;
+  }
+  .quiz__discount-item::after {
+    width: 100%;
+  }
+  .quiz__discount-item:first-child::after {
+    border-radius: 5px 0px 0px 5px;
+  }
+  .quiz__discount-item:last-child::after {
+    border-radius: 0px 5px 5px 0px;
+  }
+  .quiz__discount-total {
+    margin-bottom: 10px;
+  }
+  .quiz__bottom {
+    flex-direction: column;
+    gap: 15px;
+  }
+  .quiz__btns {
+    width: 100%;
+  }
+  .quiz__next {
+    width: 100%;
+  }
+  .quiz__progress {
+    max-width: none;
+  }
+  .quiz__btn-send-form {
+    width: 100%;
+  }
+  .quiz__input-list {
+    max-width: none;
+  }
 }
