--- a/garden-shop/release/components/quiz/quiz.html
+++ b/garden-shop/release/components/quiz/quiz.html
@@ -3,6 +3,25 @@
         <div class="quiz__stages">
             <div class="quiz__stage quiz__stage_active">
                 <div class="quiz__title demibold">Планируете передвигаться по дорогам общего пользования?</div>
+                <div class="quiz__range">
+                    <div class="quiz__range-slider">
+                        <div class="range-slider caption" data-limits="10000, 1000000" data-step="10000" data-unit=" ₽">
+                            <div class="range-slider__limits">
+                                <div class="range-slider__input-wrapper">
+                                    <input type="text"
+                                        class="range-slider__input range-slider__input_max input demibold"
+                                        value="10000">
+                                </div>
+                            </div>
+                            <div class="range-slider__wrapper ">
+                                <input class="range-slider__slider" type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="quiz__stage ">
+                <div class="quiz__title demibold">Планируете передвигаться по дорогам общего пользования?</div>
                 <div class="quiz__stage-content quiz__radio-list">
                     <label class="radio quiz__radio">Да
                         <input class="radio__input" type="radio" name="stage-1" value="Да">
@@ -17,6 +36,24 @@
                             value="Пока не планирую, но в будущем возможно">
                         <span class="radio__checkmark"></span>
                     </label>
+                </div>
+            </div>
+            <div class="quiz__stage">
+                <div class="quiz__title demibold">Планируете передвигаться по дорогам общего пользования?</div>
+                <div class="quiz__range">
+                    <div class="quiz__range-slider">
+                        <div class="range-slider caption" data-limits="0, 125" data-step="1" data-unit=" ₽">
+                            <div class="range-slider__limits">
+                                <div class="range-slider__input-wrapper">
+                                    <input type="text"
+                                        class="range-slider__input range-slider__input_max input demibold" value="10">
+                                </div>
+                            </div>
+                            <div class="range-slider__wrapper ">
+                                <input class="range-slider__slider" type="text">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="quiz__stage">
