--- a/garden-shop/release/css/main.css
+++ b/garden-shop/release/css/main.css
@@ -54,6 +54,10 @@ body {
   font-weight: 600;
 }
 
+.mb-40 {
+  margin-bottom: 40px;
+}
+
 @media (max-width: 570px) {
   .title {
     font-size: 20px;
@@ -593,6 +597,11 @@ body {
 .tab__header::-webkit-scrollbar {
   display: none;
 }
+.tab__header_black-border .tab__link {
+  background-color: transparent;
+  border-color: #212121;
+  color: #212121;
+}
 .tab__link {
   background: #f7f8fb;
   border: 1px solid transparent;
@@ -961,9 +970,41 @@ body {
   display: none;
 }
 
+.img-wide {
+  height: 400px;
+  width: 100%;
+  background-color: #e25b26;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.tile__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 30px;
+}
+.tile__btn {
+  margin-top: 20px;
+  width: 100%;
+}
+.tile .card {
+  width: 100%;
+}
+
+.block-with-sidebar__wrapper {
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+  gap: 30px;
+}
+
 @media (max-width: 1650px) {
   .slider-navigation {
     display: none;
+  }
+}
+@media (max-width: 1400px) {
+  .tile__wrapper {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 @media (max-width: 1300px) {
@@ -998,6 +1039,9 @@ body {
     flex-direction: column;
     gap: 20px;
   }
+  .tile__wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 @media (max-width: 570px) {
   .popup-info {
@@ -1019,5 +1063,9 @@ body {
   .popup__body {
     padding: 15px;
     padding-top: 30px;
+  }
+  .tile__wrapper {
+    display: flex;
+    flex-direction: column;
   }
 }
