--- a/garden-shop/release/css/style-result.css
+++ b/garden-shop/release/css/style-result.css
@@ -119,6 +119,10 @@ body {
   font-weight: 600;
 }
 
+.mb-40 {
+  margin-bottom: 40px;
+}
+
 .btn {
   font-size: 16px;
   line-height: 1;
@@ -723,6 +727,12 @@ body {
   display: none;
 }
 
+.tab__header_black-border .tab__link {
+  background-color: transparent;
+  border-color: #212121;
+  color: #212121;
+}
+
 .tab__link {
   background: #f7f8fb;
   border: 1px solid transparent;
@@ -1158,6 +1168,35 @@ body {
   display: none;
 }
 
+.img-wide {
+  height: 400px;
+  width: 100%;
+  background-color: #e25b26;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.tile__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.tile__btn {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.tile .card {
+  width: 100%;
+}
+
+.block-with-sidebar__wrapper {
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+  gap: 30px;
+}
+
 .additional__wrapper {
   display: flex;
   gap: 30px;
@@ -1389,6 +1428,29 @@ body {
   display: none;
 }
 
+.cabinet__body {
+  display: flex;
+  gap: 40px;
+}
+
+.cabinet__photo {
+  width: 100%;
+  max-width: 300px;
+  height: 300px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.cabinet__name {
+  margin-bottom: 10px;
+}
+
+.cabinet__info {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
 .card {
   width: 360px;
   height: 396px;
@@ -1421,6 +1483,8 @@ body {
   background-position: center right;
   color: #33b939;
   line-height: 100%;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .card-state_false {
@@ -1959,115 +2023,6 @@ body {
   position: static;
 }
 
-.footer {
-  background: #f7f8fb;
-}
-
-.footer__dev-wrapper {
-  display: flex;
-  gap: 60px;
-  justify-content: space-between;
-  align-items: center;
-  color: #c9c8d3;
-  padding: 20px 0;
-}
-
-.footer__dev {
-  border-top: 1px solid #c9c8d3;
-}
-
-.footer__dev-author {
-  display: flex;
-  gap: 7px;
-}
-
-.footer__dev-links {
-  display: flex;
-  gap: 30px;
-}
-
-.footer__wrapper {
-  padding: 60px 0;
-}
-
-.footer__nav {
-  width: 100%;
-  max-width: 1010px;
-}
-
-.footer__nav-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 30px;
-}
-
-.footer__subnav {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  color: #8a8894;
-  margin-top: 15px;
-}
-
-.footer__nav-link_lvl1 {
-  color: #3f3f3f;
-  font-weight: 500;
-}
-
-.footer__wrapper {
-  display: flex;
-}
-
-.footer__info-tel {
-  text-align: right;
-}
-
-.footer__info-tel-label {
-  margin-top: 5px;
-  color: #c9c8d3;
-}
-
-.footer__info-top {
-  display: flex;
-  justify-content: flex-end;
-  gap: 70px;
-  margin-bottom: 40px;
-}
-
-.footer__info-title {
-  color: #8a8894;
-  margin-bottom: 10px;
-  text-align: right;
-}
-
-.footer__info-payment {
-  display: flex;
-  justify-content: flex-end;
-  gap: 10px;
-}
-
-.footer__info-payment img {
-  width: 45px;
-  height: 30px;
-}
-
-.footer__info-btm {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 30px;
-}
-
-.footer__info {
-  max-width: 490px;
-  width: 100%;
-}
-
-.footer__info-social {
-  display: flex;
-  gap: 20px;
-  justify-content: flex-end;
-}
-
 .detail-block__header {
   display: flex;
   justify-content: space-between;
@@ -2314,6 +2269,115 @@ body {
 
 .detail-block__sticker_green {
   background: #e8eced;
+}
+
+.footer {
+  background: #f7f8fb;
+}
+
+.footer__dev-wrapper {
+  display: flex;
+  gap: 60px;
+  justify-content: space-between;
+  align-items: center;
+  color: #c9c8d3;
+  padding: 20px 0;
+}
+
+.footer__dev {
+  border-top: 1px solid #c9c8d3;
+}
+
+.footer__dev-author {
+  display: flex;
+  gap: 7px;
+}
+
+.footer__dev-links {
+  display: flex;
+  gap: 30px;
+}
+
+.footer__wrapper {
+  padding: 60px 0;
+}
+
+.footer__nav {
+  width: 100%;
+  max-width: 1010px;
+}
+
+.footer__nav-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.footer__subnav {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: #8a8894;
+  margin-top: 15px;
+}
+
+.footer__nav-link_lvl1 {
+  color: #3f3f3f;
+  font-weight: 500;
+}
+
+.footer__wrapper {
+  display: flex;
+}
+
+.footer__info-tel {
+  text-align: right;
+}
+
+.footer__info-tel-label {
+  margin-top: 5px;
+  color: #c9c8d3;
+}
+
+.footer__info-top {
+  display: flex;
+  justify-content: flex-end;
+  gap: 70px;
+  margin-bottom: 40px;
+}
+
+.footer__info-title {
+  color: #8a8894;
+  margin-bottom: 10px;
+  text-align: right;
+}
+
+.footer__info-payment {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+}
+
+.footer__info-payment img {
+  width: 45px;
+  height: 30px;
+}
+
+.footer__info-btm {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+
+.footer__info {
+  max-width: 490px;
+  width: 100%;
+}
+
+.footer__info-social {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
 }
 
 .header {
@@ -2743,6 +2807,22 @@ body {
   object-fit: cover;
   -o-object-position: left center;
   object-position: left center;
+}
+
+.home-slider_sale .home-slider__navigation {
+  display: none;
+}
+
+.home-slider_sale .home-slider__pagination {
+  display: none;
+}
+
+.home-slider_sale .home-slider__container {
+  max-width: none;
+}
+
+.home-slider_sale .home-slider__slide {
+  width: 100%;
 }
 
 .line-form__text {
@@ -3216,6 +3296,37 @@ body {
   margin-top: auto;
 }
 
+.sale-block__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.sale-block__load-btn {
+  width: 100%;
+  margin-top: 30px;
+}
+
+.sale-item__img {
+  height: 300px;
+  background-color: #e25b26;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
+.sale-item__date {
+  margin-bottom: 5px;
+}
+
+.sale-item__text {
+  margin-top: 5px;
+}
+
+.sale-item:nth-child(even) .sale-item__img {
+  background-color: #124144;
+}
+
 .sidebar {
   position: relative;
   z-index: 5;
@@ -3238,14 +3349,21 @@ body {
   display: block;
   width: 24px;
   height: 22px;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  background-color: #212121;
 }
 
 .sidebar__item:hover .sidebar__link {
   color: #e25b26;
 }
 
-.sidebar__item:hover .sidebar__link svg path {
-  fill: #e25b26;
+.sidebar__item:hover .sidebar__link-icon {
+  background-color: #e25b26;
 }
 
 .sidebar__item:hover .sidebar__sublist {
@@ -3470,6 +3588,10 @@ body {
 }
 
 @media (max-width: 1400px) {
+  .tile__wrapper {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
   .additional__wrapper {
     flex-direction: column;
   }
@@ -3883,8 +4005,16 @@ body {
     gap: 20px;
   }
 
+  .tile__wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+
   .home-slider__container {
     overflow: visible;
+  }
+
+  .sale-block__list {
+    grid-template-columns: 1fr 1fr;
   }
 }
 
@@ -4139,6 +4269,11 @@ body {
     padding-top: 30px;
   }
 
+  .tile__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
   .article-item {
     width: 100%;
   }
@@ -4184,6 +4319,16 @@ body {
 
   .default-slider .card {
     height: auto;
+  }
+
+  .detail-block__header {
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+  }
+
+  .detail-block__order-info {
+    flex-wrap: wrap;
   }
 
   .footer__info {
@@ -4260,16 +4405,6 @@ body {
 
   .accordion_v1 .a-container_open .footer__nav-link_lvl1::after {
     transform: translateY(-50%) rotate(180deg);
-  }
-
-  .detail-block__header {
-    flex-direction: column;
-    gap: 10px;
-    align-items: flex-start;
-  }
-
-  .detail-block__order-info {
-    flex-wrap: wrap;
   }
 
   .header__mid {
@@ -4404,5 +4539,10 @@ body {
   .review-card {
     width: 100%;
     min-height: 0;
+  }
+
+  .sale-block__list {
+    display: flex;
+    flex-direction: column;
   }
 }
